--- a/sass/_design-font-and-line-height.scss
+++ b/sass/_design-font-and-line-height.scss
@@ -90,7 +90,7 @@ webfont definitions
 
   font-family: var(--font-system); // fallback
 
-  --menu-item-line-height: 1.2;
+  --menu-item-line-height: 1.3;
 }
 /*
 
